# python-devcontainer

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
